fix(stickersheet): move table alignment to table

--- a/storybook/components/StickerSheet/StickerSheet.module.scss
+++ b/storybook/components/StickerSheet/StickerSheet.module.scss
@@ -6,3 +6,7 @@
     margin-bottom: $spacing-sm;
   }
 }
+
+.stickerSheetTable {
+  margin-left: calc(-1 * #{$spacing-sm});
+}
