--- a/storybook/components/StickerSheet/components/StickerSheetRow/StickerSheetRow.module.scss
+++ b/storybook/components/StickerSheet/components/StickerSheetRow/StickerSheetRow.module.scss
@@ -3,7 +3,3 @@
 .stickerSheetCell {
   padding: $spacing-sm;
 }
-
-.rowTitle {
-  padding-left: 0;
-}
